gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23905.d
version https://git-lfs.github.com/spec/v1
oid sha256:7d7e3807b646b90d9c338cf59218a00ab9f9a6896bb33b271f9424db29fb1154
size 355
